--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="intro_report">Feel free to let us know if there was an issue when reserving a room and we will do our best to resolve it.</string>
     <string name="check_in">Check-In</string>
     <string name="cancel">Cancel</string>
+    <string name="access_token">
+        pk.eyJ1Ijoid2Vld29vd2Vld29vIiwiYSI6ImNqdzQ2ZWNhdTBpMnQ0MHJ5a3RweGRidG8ifQ.Shd8ZCdRSfwST-OJWrrAsw
+    </string>
+    <string name="greenMarkerDesc">Marker that implies building has empty room during specified time</string>
+    <string name="redMarkerDesc">Marker that implies building has no empty rooms during specified time</string>
 </resources>
